# minos

./: .env  .gitignore  Cargo.toml  README.md  docker-compose-kratos-only.yml  docker-compose.yml  package.json
.github/workflows/: docker-compile.yml  lint.yml  rust.yml
minos/: .env  Cargo.toml  Dockerfile  README.md  sqlx-data.json
minos-configs/: id.jsonnet  identity.schema.json  identity.traits.schema.json  kratos-staging.yml  kratos.yml  minos_user.jsonnet  oidc.apple.jsonnet  oidc.discord.jsonnet  oidc.github.jsonnet  oidc.gitlab.jsonnet  oidc.google.jsonnet  oidc.microsoft.jsonnet
minos/minos-configs/: kratos-staging.yml  kratos.yml  oidc.apple.jsonnet  oidc.gitlab.jsonnet  oidc.microsoft.jsonnet
minos/src/: error.rs  main.rs
minos/src/auth/: middleware.rs  mod.rs
minos/src/database/: labrinth_database.rs  mod.rs  postgres_database.rs
minos/src/database/models/: labrinth.rs  labrinth_user.rs  mod.rs  webhook.rs
minos/src/routes/: callback.rs  delete.rs  demo.rs  import.rs  key_generation.rs  login.rs  mod.rs  not_found.rs  oidc.rs  user.rs
minos/src/util/: callback.rs  email.rs  env.rs  fetch.rs  mod.rs  oidc.rs  ory.rs
nuxt-3-example/: .env  .eslintrc.json  .gitignore  Dockerfile  README.md  nuxt.config.ts  package-lock.json  package.json
nuxt-3-example/helpers/: ory-ui-extract.js
nuxt-3-example/pages/: error.vue  index.vue  login.vue  recovery.vue  (+3 more)
nuxt-example/: .env  README.md  modrinth-quickstart.yml  nuxt.config.js  package-lock.json  package.json
pasiphae/: .env  Dockerfile  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
(+33 files in other folders)
